[package]
name = "eth-wallet-valuator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = { version = "1.13.0", features = ["full"] }
reqwest = "0.11.6"
serde = { version = "1.0.130", features = ["derive"] }